fix scroll overflow

--- a/sass/pages/_faq.scss
+++ b/sass/pages/_faq.scss
@@ -2,7 +2,7 @@
 
 .faq {
 	overflow: auto;
-
+	height: 90%;
 	@include media-query.mobile {
 		height: 90%;
 	}
